# vivid-consumer-wm

./: .gitignore  README.md
consumer/gnome/extension/: extension.js
consumer/gnome/extension/shell/helper/: display-helper.js
consumer/gnome/extension/shell/integration/: gnomeShellOverride.js
consumer/gnome/extension/shell/ui/: wallpaper.js
consumer/gnome/src/display_consumer/: vivid_display_consumer_dmabuf_texture.c  vivid_display_consumer_dmabuf_texture.h
consumer/hyprland-plugin/: README.md  meson.build  meson_options.txt
consumer/hyprland-plugin/src/: output_map.cpp  output_map.hpp  plugin.cpp  pointer_debug.cpp  pointer_debug.hpp  pointer_mapper.cpp  pointer_mapper.hpp  vivid_bridge.hpp  vivid_protocol.hpp  vivid_socket.cpp  vivid_socket.hpp
consumer/hyprland-plugin/tests/: hash_policy_test.cpp  install_workflow_test.sh  output_map_test.cpp  pointer_debug_test.cpp  pointer_mapper_test.cpp  protocol_test.cpp  socket_backoff_test.cpp  socket_queue_test.cpp
consumer/wayland/: README.md  meson.build  meson_options.txt
consumer/wayland/src/: displayConnection.js  fdDebug.js  hyprlandPointer.js  layer-shell-probe.js  layerShellSurfaces.js  outputModel.js  protocolPayloads.js  runtimeArgs.js  runtimeTopology.js
consumer/wayland/tests/: display-connection-state.test.js  fd-debug.test.js  hyprland-pointer.test.js  layer-shell-surfaces.test.js  output-model.test.js  protocol-payloads.test.js  runtime-args.test.js  runtime-topology.test.js
docs/superpowers/plans/: 2026-06-19-hyprland-plugin-implementation.md  2026-06-19-wayland-consumer-implementation.md
docs/superpowers/specs/: 2026-06-19-hyprland-bridge-design.md  2026-06-19-wayland-consumer-design.md
producer/src/daemon/: CMakeLists.txt  vivid_dmabuf_negotiation.c  vivid_fd_debug.c  vivid_fd_debug.h  vivid_pointer_debug.c  vivid_pointer_debug.h  vivid_producer.c  vivid_producer_config.c  vivid_producer_config.h
producer/src/daemon/tests/: vivid_dmabuf_negotiation_test.c  vivid_fd_debug_test.c  vivid_pointer_debug_test.c
producer/src/webui/: main.js
tools/: vivid.sh
tools/consumer_hyprland_plugin/: build_env.sh  run.sh
tools/consumer_wayland/: build_env.sh  run.sh
tools/systemd_user/: install.sh  vivid-hyprland.target.in  vivid-producer.service.in  vivid-wayland-hyprland.service.in  vivid-webui.service.in
tools/systemd_user/tests/: install_workflow_test.sh
